# govee2mqtt

./: .coveragerc  .dockerignore  .env.sample  .gitignore  .releaserc  .releaserc.json  .trivyignore  CHANGELOG.md  Dockerfile  ENVIRONMENT_VARIABLES.md  Makefile  README.md  SECURITY.md  __init__.py  app.py  config.yaml.sample  docker-compose.yaml  entrypoint.sh  govee_api.py  govee_mqtt.py  govee_mqtt.py.bak  goveeapi.py  goveeapi.py.bak  healthcheck.py  log.py  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  split.sh  util.py
.claude/: settings.local.json
.githooks/: pre-commit
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: claude-code-review.yaml  deploy  deploy.yaml  dockerhub-description.yaml  tests.yaml
govee_mqtt/: __init__.py  _imports.py  core.py
govee_mqtt/mixins/: base.py  govee.py  helpers.py  loops.py  mqtt.py  refresh.py  service.py  topics.py
src/: healthcheck.py
src/govee2mqtt/: __init__.py  __main__.py  app.py  base.py  core.py  interface.py
src/govee2mqtt/mixins/: govee.py  govee_api.py  helpers.py  loops.py  mqtt.py  publish.py  refresh.py  service.py  topics.py  util.py
tests/: conftest.py  test_base.py  test_govee.py  test_helpers.py  test_loops.py  test_mqtt.py  test_publish.py  test_refresh.py
tests/util/: test_util.py
tools/: clear.sh
